--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Путевки в Азнаур</title>
+    <title>Туры Карачаево-Черкесской республики</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container">
-            <a class="navbar-brand mr-4" href="/">Туры в Азнаура</a>
+            <a class="navbar-brand mr-4" href="/">Туры Карачаево-Черкесской республики</a>
 
             {% block navigation %}{% endblock %}
 
