--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,64 @@
 
 {% block content %}
 
-{% for tour in tours %}
+	<h1>Список туров</h1><br/>
 
-<div>
+	<form action="/" method="GET">
+		<label for="location">Место:</label>
+		<select id="location" name="location">
+			<option value="">Выберите место</option>
+			{% for loc in locations %}
+				<option value="{{ loc }}">{{ loc }}</option>
+			{% endfor %}
+		</select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-    <h3>{{ tour.name }}</h3>
-    <p>{{ tour.description }}</p>
-    <a href="{{ tour.id }}">Заказать</a>
+		<label for="duration">Длительность:</label>
+		<select id="duration" name="duration">
+			<option value="">Выберите длительность</option>
+			<option value="1">1 день</option>
+			<option value="2">2 дня</option>
+			<option value="3">3 дня</option>
+			<option value="4">4 дня</option>
+			<!-- <option value="5">5 дней и более</option> -->
+		</select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-</div>
+		<input type="submit" value="Фильтровать">
+	</form>
 
-{% endfor %}
+	<style>
+		.tour {
+			border: 1px solid #e5e5e5;
+			padding: 10px;
+			margin-bottom: 20px;
+			border-radius: 5px;
+		}
+		.tour h4 {
+			margin-top: 0;
+		}
+		.tour p {
+			margin-bottom: 5px;
+		}
+	</style>
+
+    <br/>
+
+	<div class="container">
+
+		{% for tour in tours %}
+
+		<div class="row">
+			<div class="col-md-4">
+				<div class="tour">
+					<h4>Тур "{{ tour.name }}"</h4>
+					<p><strong>Стоимость:</strong> {{ tour.price }} руб.</p>
+					<p><strong>Место:</strong> {{ tour.location }} </p>
+					<p><strong>Длительность:</strong> {{ tour.duration }} дня </p>
+					<p><strong>Описание:</strong> {{ tour.description }} </p>
+				</div>
+			</div>
+		</div>
+
+		{% endfor %}
+
 
 {% endblock %}
