--- a/templates/new_tour.html
+++ b/templates/new_tour.html
@@ -2,11 +2,28 @@
 
 {% block content %}
 
-<form action='new_tour' method='POST'>
-    <input type='text' name='username' id='username' placeholder='Имя пользователя'/>
-    <input type='password' name='password' id='password' placeholder='Пароль'/>
-    <input type='password' name='password' id='password' placeholder='Пароль'/>
-    <input type='submit' name='submit' value="Создать"/>
+<form method="POST" action="/new_tour">
+  <div class="form-group">
+    <label for="name">Название тура:</label>
+    <input type="text" class="form-control" id="name" name="name" required>
+  </div>
+  <div class="form-group">
+    <label for="description">Описание:</label>
+    <textarea class="form-control" id="description" name="description" required></textarea>
+  </div>
+  <div class="form-group">
+    <label for="location">Место:</label>
+    <input type="text" class="form-control" id="location" name="location" required>
+  </div>
+  <div class="form-group">
+    <label for="duration">Продолжительность (в днях):</label>
+    <input type="number" class="form-control" id="duration" name="duration" required>
+  </div>
+  <div class="form-group">
+    <label for="price">Цена (в рублях):</label>
+    <input type="number" class="form-control" id="price" name="price" required>
+  </div>
+  <button type="submit" class="btn btn-primary">Добавить тур</button>
 </form>
 
 {% endblock %}
