--- a/templates/register.html
+++ b/templates/register.html
@@ -2,10 +2,16 @@
 
 {% block content %}
 
-<form action='register' method='POST'>
-    <input type='text' name='username' id='username' placeholder='Имя пользователя'/>
-    <input type='password' name='password' id='password' placeholder='Пароль'/>
-    <input type='submit' name='submit' value='Зарегистрироваться!'/>
+<form action="register" method="POST">
+    <div class="form-group">
+        <label for="username">Имя пользователя:</label>
+        <input type="text" class="form-control" id="username" name="username" placeholder="Имя пользователя">
+    </div>
+    <div class="form-group">
+        <label for="password">Пароль:</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="Пароль">
+    </div>
+    <button type="submit" class="btn btn-primary" name="submit">Зарегистрироваться!</button>
 </form>
 
 {% endblock %}
