--- a/templates/index.html
+++ b/templates/index.html
@@ -30,12 +30,26 @@
 
 <br>
 
+<style>
+    .tour-image {
+        width: 150px;
+        height: auto;
+        float: left;
+        margin-right: 10px;
+    }
+
+
+</style>
+
 <div class="container">
 
     {% for tour in tours %}
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-4">
+            <img src="/uploads/{{ tour.image or '45.png' }}" class="img-fluid rounded" alt="Tour Image">
+        </div>
+        <div class="col-md-8">
             <div class="card mb-4">
                 <div class="card-body">
                     <h4 class="card-title">Тур "{{ tour.name }}"</h4>
