--- a/templates/new_tour.html
+++ b/templates/new_tour.html
@@ -2,28 +2,32 @@
 
 {% block content %}
 
-<form method="POST" action="/new_tour">
-  <div class="form-group">
-    <label for="name">Название тура:</label>
-    <input type="text" class="form-control" id="name" name="name" required>
-  </div>
-  <div class="form-group">
-    <label for="description">Описание:</label>
-    <textarea class="form-control" id="description" name="description" required></textarea>
-  </div>
-  <div class="form-group">
-    <label for="location">Место:</label>
-    <input type="text" class="form-control" id="location" name="location" required>
-  </div>
-  <div class="form-group">
-    <label for="duration">Продолжительность (в днях):</label>
-    <input type="number" class="form-control" id="duration" name="duration" required>
-  </div>
-  <div class="form-group">
-    <label for="price">Цена (в рублях):</label>
-    <input type="number" class="form-control" id="price" name="price" required>
-  </div>
-  <button type="submit" class="btn btn-primary">Добавить тур</button>
+<form method="POST" action="/new_tour" enctype="multipart/form-data">
+    <div class="form-group">
+        <label for="name">Название тура:</label>
+        <input type="text" class="form-control" id="name" name="name" required>
+    </div>
+    <div class="form-group">
+        <label for="description">Описание:</label>
+        <textarea class="form-control" id="description" name="description" required></textarea>
+    </div>
+    <div class="form-group">
+        <label for="location">Место:</label>
+        <input type="text" class="form-control" id="location" name="location" required>
+    </div>
+    <div class="form-group">
+        <label for="duration">Продолжительность (в днях):</label>
+        <input type="number" class="form-control" id="duration" name="duration" required>
+    </div>
+    <div class="form-group">
+        <label for="price">Цена (в рублях):</label>
+        <input type="number" class="form-control" id="price" name="price" required>
+    </div>
+    <div class="form-group">
+        <label for="image">Изображение:</label>
+        <input type="file" class="form-control-file" id="image" name="image">
+    </div>
+    <button type="submit" class="btn btn-primary">Добавить тур</button>
 </form>
 
 {% endblock %}
