--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,47 +2,75 @@
 
 {% block content %}
 
-	<h1>Корзина</h1><br/>
+<h1>Корзина</h1><br/>
 
-	<style>
-		.tour {
-			border: 1px solid #e5e5e5;
-			padding: 10px;
-			margin-bottom: 20px;
-			border-radius: 5px;
-		}
-		.tour h4 {
-			margin-top: 0;
-		}
-		.tour p {
-			margin-bottom: 5px;
-		}
-	</style>
+<div class="container">
 
-	<div class="container">
+    {% for tour in tours %}
 
-		{% for tour in tours %}
+    <div class="row">
+        <div class="col-md-4">
+            <img src="/uploads/{{ tour.image or 'tour.png' }}" class="img-fluid rounded" alt="Tour Image">
+        </div>
+        <div class="col-md-8">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h4 class="card-title">Тур "{{ tour.name }}"</h4>
+                    <p class="card-text"><strong>Стоимость:</strong> {{ tour.price }} руб.</p>
+                    <p class="card-text"><strong>Место:</strong> {{ tour.location }}</p>
+                    <p class="card-text"><strong>Длительность:</strong> {{ tour.duration }} дня</p>
+                    <p class="card-text"><strong>Описание:</strong> {{ tour.description }}</p>
 
-		<div class="row">
-			<div class="col-md-12">
-				<div class="tour">
-					<h4>Тур "{{ tour.name }}"</h4>
-					<p><strong>Стоимость:</strong> {{ tour.price }} руб.</p>
-					<p><strong>Место:</strong> {{ tour.location }} </p>
-					<p><strong>Длительность:</strong> {{ tour.duration }} дня </p>
-					<p><strong>Описание:</strong> {{ tour.description }} </p>
-
-					<form action="/remove_from_cart/{{ tour.id }}" method="POST">
-						<input type="submit" value="Удалить из корзины">
-					</form>
-				</div>
-			</div>
-		</div>
-
-		{% endfor %}
-
+                    <form action="/remove_from_cart/{{ tour.id }}" method="POST">
+                        <input type="submit" value="Удалить из корзины">
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
+    {% endfor %}
+
+</div>
+
+{% if tours %}
 <h1>Итого: {{ total_price }} руб. </h1>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 mx-auto">
+            <h2 class="text-center mb-4">Оформление заказа</h2>
+            <form action="/cart" method="POST">
+                <div class="form-group">
+                    <label for="name">Имя</label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Введите ваше имя">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Введите ваш email">
+                </div>
+                <div class="form-group">
+                    <label for="quantity">Количество человек</label>
+                    <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Введите количество человек">
+                </div>
+                <div class="form-group">
+                    <label for="date">Дата поездки</label>
+                    <input type="date" class="form-control" id="date" name="date">
+                </div>
+                <div class="form-group">
+                    <label for="comment">Дополнительный комментарий</label>
+                    <textarea class="form-control" id="comment" name="comment" rows="3" placeholder="Введите комментарий"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block" name="submit">Отправить</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<br>
+
+{% else %}
+<h1>Корзина пуста. </h1>
+{% endif %}
 
 {% endblock %}
