orders 2 + tour.png

--- a/templates/user_base.html
+++ b/templates/user_base.html
@@ -7,14 +7,14 @@
     <a class="nav-link" href="/new_tour">Добавить тур</a>
 </ul>
 <ul class="navbar-nav">
-    <a class="nav-link" href="/requests">Заявки</a>
+    <a class="nav-link" href="/orders">Заявки</a>
 </ul>
 {% else %}
 <ul class="navbar-nav">
     <a class="nav-link" href="/cart">Корзина</a>
 </ul>
 <ul class="navbar-nav">
-    <a class="nav-link" href="/my_requests">Мои заявки</a>
+    <a class="nav-link" href="/orders">Мои заявки</a>
 </ul>
 {% endif %}
 
